--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "next_mui2",
+  "name": "queues",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,16 +9,32 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.14.18",
+    "@mui/material": "^5.14.17",
+    "@mui/system": "^5.14.17",
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/client": "^5.5.2",
+    "framer-motion": "^10.16.5",
+    "moment": "^2.29.4",
+    "next": "14.0.2",
+    "next-auth": "^4.24.5",
+    "next-connect": "^1.0.0-next.4",
+    "nodemailer": "^6.9.7",
     "react": "^18",
+    "react-barcode": "^1.4.6",
     "react-dom": "^18",
-    "next": "14.0.2"
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/uuid": "^9.0.7",
     "eslint": "^8",
-    "eslint-config-next": "14.0.2"
+    "eslint-config-next": "14.0.2",
+    "prisma": "^5.5.2",
+    "typescript": "^5"
   }
 }
